Font fixes, spacing fixes

--- a/sass/scss/_theme.scss
+++ b/sass/scss/_theme.scss
@@ -16,7 +16,7 @@ $base-green-ultradark: #0B4D17;
 $text-colour: #000;
 $light-text-colour: rgba(255, 255, 255, 0.5);
 
-$sans-font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+$sans-font-family: "Helvetica Neue", Helvetica, "Liberation Sans", Arial, sans-serif;
 
 @mixin shadow {
     -webkit-box-shadow: 0px 0.5rem 1rem 0px rgba(50, 50, 50, 0.5);
